--- a/NA250B/ConfigFiles/Default.ini
+++ b/NA250B/ConfigFiles/Default.ini
@@ -7,7 +7,7 @@ filename=Default.ini
 
 [part1]
 Reference_Fr=24005
-Description=Example with DLD
+Description=Default
 Mode=Measured FL
 Reference_CL=12
 Power_Applied_1=1000
