--- a/NA250B/ConfigFiles/test.ini
+++ b/NA250B/ConfigFiles/test.ini
@@ -7,8 +7,8 @@ filename=test.ini
 
 [part1]
 Reference_Fr=14000000
-Description=Example with DLD test123
-Mode=Measured FL
+Description=test
+Mode=
 Reference_CL=12
 Power_Applied_1=1000
 Power_Applied_2=nW
